--- a/po/lg.po
+++ b/po/lg.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-09-06 23:02+0200\n"
+"PO-Revision-Date: 2013-07-09 21:44+0000\n"
 "Last-Translator: kizito <kbirabwa@yahoo.co.uk>\n"
 "Language-Team: lg <kbirabwa@yahoo.co.uk>\n"
 "Language: lg\n"
@@ -16,7 +16,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Pootle 2.0.5\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1373406240.0\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "Choose An Application"
@@ -27,9 +28,8 @@ msgid "<b>File Type To be Opened:</b>"
 msgstr "<b>Kika kya fayiro ekinaabikkulibwa:</b>"
 
 #: ../data/ui/app-chooser.glade.h:3
-#, fuzzy
 msgid "_Installed Application"
-msgstr "Puloguramu ewangidwa ku kompyuta"
+msgstr "Puloguramu e_wangidwa ku kompyuta"
 
 #: ../data/ui/app-chooser.glade.h:4
 msgid "<b>Command line to execute:</b>"
@@ -40,9 +40,8 @@ msgid "_Browse"
 msgstr "_Yandaaza"
 
 #: ../data/ui/app-chooser.glade.h:6
-#, fuzzy
 msgid "_Execute in terminal emulator"
-msgstr "Omulimu gukolere okuva mu kiwandikiro"
+msgstr "Omulimu gu_kolere okuva mu kiwandikiro"
 
 #: ../data/ui/app-chooser.glade.h:8
 #, no-c-format
@@ -60,14 +59,12 @@ msgstr ""
 "  <b>%U</b>: We kabawaddawo ndagiriro ez'oku yintaneti ezisukkamu emu"
 
 #: ../data/ui/app-chooser.glade.h:13
-#, fuzzy
 msgid "_Custom Command Line"
-msgstr "Wandika ekiragiriro kyo"
+msgstr "Wandika Eki_ragiriro Kyo"
 
 #: ../data/ui/app-chooser.glade.h:14
-#, fuzzy
 msgid "_Set selected application as default action of this file type"
-msgstr "Puloguramu erondedwa y,eba ekola ku fayiro ez'ekika kino bulijjo"
+msgstr "Puloguramu erondedwa _y,eba ekola ku fayiro ez'ekika kino bulijjo"
 
 #: ../data/ui/ask-rename.glade.h:1
 msgid "Confirm to replace files"
@@ -101,14 +98,12 @@ msgid "with the following file?"
 msgstr "waddewo fayiro eno?"
 
 #: ../data/ui/ask-rename.glade.h:9
-#, fuzzy
 msgid "_File Name:"
-msgstr "Erinnya lya fayiro:"
+msgstr "Erinnya lya _fayiro:"
 
 #: ../data/ui/ask-rename.glade.h:10
-#, fuzzy
 msgid "_Apply this option to all existing files"
-msgstr "Ekirondedwa kitegekebwe ne ku fayiro endala zonna eziriwo"
+msgstr "Ekirondedwa ki_tegekebwe ne ku fayiro endala zonna eziriwo"
 
 #: ../data/ui/file-prop.glade.h:1
 msgid "File Properties"
@@ -155,29 +150,24 @@ msgid "_General"
 msgstr "_Ebitalibimu"
 
 #: ../data/ui/file-prop.glade.h:12
-#, fuzzy
 msgid "<b>O_wner:</b>"
-msgstr "<b>Nyini yo:</b>"
+msgstr "<b>_Nyini yo:</b>"
 
 #: ../data/ui/file-prop.glade.h:13
-#, fuzzy
 msgid "<b>G_roup:</b>"
-msgstr "<b>Guluupu:</b>"
+msgstr "<b>_Guluupu:</b>"
 
 #: ../data/ui/file-prop.glade.h:14
-#, fuzzy
 msgid "<b>_View content:</b>"
-msgstr "<b>Laba ebirimu:</b>"
+msgstr "<b>_Laba ebirimu:</b>"
 
 #: ../data/ui/file-prop.glade.h:15
-#, fuzzy
 msgid "<b>C_hange content:</b>"
-msgstr "<b>Kyusamu ebirimu:</b>"
+msgstr "<b>Ky_usamu ebirimu:</b>"
 
 #: ../data/ui/file-prop.glade.h:16
-#, fuzzy
 msgid "<b>_Execute:</b>"
-msgstr "<b>Tandika mulimu:</b>"
+msgstr "<b>_Tandika mulimu:</b>"
 
 #: ../data/ui/file-prop.glade.h:17
 msgid "<b>Special bits:</b>"
@@ -333,7 +323,7 @@ msgstr "Omulimu gukolere okuva mu _kiwandikiro"
 
 #: ../data/ui/filesearch.glade.h:1
 msgid "Bytes"
-msgstr ""
+msgstr "Bayiti"
 
 #: ../data/ui/filesearch.glade.h:2 ../src/base/fm-utils.c:88
 msgid "KB"
@@ -349,133 +339,120 @@ msgstr "GB"
 
 #: ../data/ui/filesearch.glade.h:5
 msgid "Choose a date"
-msgstr ""
+msgstr "Londa olunaku"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
-msgstr ""
+msgstr "Londa olunaku okuva mu kalenda eno"
 
 #: ../data/ui/filesearch.glade.h:7
-#, fuzzy
 msgid "Search Files"
-msgstr "_Sengeka fayiro"
+msgstr "Noonyeza mu fayiro"
 
 #: ../data/ui/filesearch.glade.h:8
-#, fuzzy
 msgid "<b>File _Name Patterns</b>"
-msgstr "<b>Kika kya fayiro:</b>"
+msgstr "<b>Ebisangibwa Mu _Manya Ga Fayiro:</b>"
 
 #: ../data/ui/filesearch.glade.h:9
 msgid "*"
-msgstr ""
+msgstr "*"
 
 #: ../data/ui/filesearch.glade.h:10
 msgid "Case insensiti_ve"
-msgstr ""
+msgstr "_Toyawula mu nnukuta nnene n'entono"
 
 #: ../data/ui/filesearch.glade.h:11
 msgid "_Use regular expression"
-msgstr ""
+msgstr "_Noonyezesa emboozi ennoonya ebigifaanana"
 
 #: ../data/ui/filesearch.glade.h:12
 msgid "<b>Places to Search</b>"
-msgstr ""
+msgstr "<b>Awanaanoonyezebwa</b>"
 
 #: ../data/ui/filesearch.glade.h:13
 msgid "_Search in sub directories"
-msgstr ""
+msgstr "_Noonyeza ne mu materekero agali munda mwa gannaago"
 
 #: ../data/ui/filesearch.glade.h:14
 msgid "Search _hidden files"
-msgstr ""
+msgstr "Kebera ne fayiro enk_ise"
 
 #: ../data/ui/filesearch.glade.h:15
 msgid "Name/_Location"
-msgstr ""
+msgstr "Linnya/_Busangiro"
 
 #: ../data/ui/filesearch.glade.h:16
-#, fuzzy
 msgid "<b>File Type</b>"
-msgstr "<b>Kika kya fayiro:</b>"
+msgstr "<b>Kika Kya Fayiro</b>"
 
 #: ../data/ui/filesearch.glade.h:17
 msgid "Only search for files of following types"
-msgstr ""
+msgstr "Noonya fayiro ez'ebika bino byokka"
 
 #: ../data/ui/filesearch.glade.h:18
-#, fuzzy
 msgid "Te_xt files"
-msgstr "Nzigyawo fayiro"
+msgstr "Fayiro ez'ebi_gambobugambo"
 
 #: ../data/ui/filesearch.glade.h:19
-#, fuzzy
 msgid "_Image files"
-msgstr "Mu bisuulidwa nteekayo fayiro"
+msgstr "Fayiro ez'ebif_aananyi"
 
 #: ../data/ui/filesearch.glade.h:20
-#, fuzzy
 msgid "_Audio files"
-msgstr "_Sengeka fayiro"
+msgstr "Fayiro ez'ebiw_ulirizibwa"
 
 #: ../data/ui/filesearch.glade.h:21
-#, fuzzy
 msgid "_Video files"
-msgstr "_Sengeka fayiro"
+msgstr "Fayiro eza _vidiyo"
 
 #: ../data/ui/filesearch.glade.h:22
 msgid "_Documents"
-msgstr ""
+msgstr "_Biwandike"
 
 #: ../data/ui/filesearch.glade.h:23
-#, fuzzy
 msgid "File _Type"
-msgstr "Sengekera ku _kika kya fayiro"
+msgstr " _Kika Kya Fayiro"
 
 #: ../data/ui/filesearch.glade.h:24
-#, fuzzy
 msgid "<b>File Contain_s</b>"
-msgstr "<b>Ebbanga eritwalibwa ku disiki:</b>"
+msgstr "<b>Ebi_sangibwa Mu Fayiro</b>"
 
 #: ../data/ui/filesearch.glade.h:25
 msgid "C_ontent"
-msgstr ""
+msgstr "Ebiri_mu"
 
 #: ../data/ui/filesearch.glade.h:26
-#, fuzzy
 msgid "<b>File Size</b>"
-msgstr "<b>Kika kya fayiro:</b>"
+msgstr "<b>Bunene Bwa Fayiro</b>"
 
 #: ../data/ui/filesearch.glade.h:27
 msgid "_Smaller than:"
-msgstr ""
+msgstr "_Ntono ku:"
 
 #: ../data/ui/filesearch.glade.h:28
 msgid "_Bigger than:"
-msgstr ""
+msgstr "Nn_ene ku:"
 
 #: ../data/ui/filesearch.glade.h:29
-#, fuzzy
 msgid "<b>Last Modified Time</b>"
-msgstr "<b>Amakyuka agaasemba:</b>"
+msgstr "<b>Amakyuka Agaasemba</b>"
 
 #: ../data/ui/filesearch.glade.h:30 ../src/gtk/fm-gtk-file-launcher.c:531
 #: ../src/gtk/fm-gtk-file-launcher.c:538
-#, fuzzy
 msgid "(None)"
-msgstr "Bwereere"
+msgstr "(Bbule)"
 
 #: ../data/ui/filesearch.glade.h:31
 msgid "_Earlier than:"
-msgstr ""
+msgstr "_Dda okusinga:"
 
 #: ../data/ui/filesearch.glade.h:32
 msgid "L_ater than:"
-msgstr ""
+msgstr "Lu_vanyuma lwa:"
 
 #: ../data/ui/filesearch.glade.h:33
-#, fuzzy
 msgid "_Properties"
-msgstr "Ebikwata ku fayiro"
+msgstr "Ebi_kwata ku fayiro"
 
 #: ../src/base/fm-utils.c:80 ../src/base/fm-utils.c:111
 #, c-format
@@ -624,9 +601,8 @@ msgstr ""
 "Enkyuka zino nzikole ku fayiro zonna n'amaterekero agali munda mu lino?"
 
 #: ../src/gtk/fm-file-properties.c:633
-#, fuzzy
 msgid "<b>_Access content:</b>"
-msgstr "<b>Eby'endukusa</b>"
+msgstr "<b>_Kukola ku birimu:</b>"
 
 #: ../src/gtk/fm-file-properties.c:748
 msgid "Files of different types"
@@ -645,34 +621,28 @@ msgid "Applications"
 msgstr "Puloguramu"
 
 #: ../src/gtk/fm-places-view.c:101
-#, fuzzy
 msgid "_Mount Volume"
-msgstr "Wanga ekibondo"
+msgstr "_Wanga Volyumu"
 
 #: ../src/gtk/fm-places-view.c:102
-#, fuzzy
 msgid "_Unmount Volume"
-msgstr "Wangula ekibondo"
+msgstr "Wang_ula Volyumu"
 
 #: ../src/gtk/fm-places-view.c:103
-#, fuzzy
 msgid "_Eject Removable Media"
-msgstr "Wandula ekitereka data ekigyikamu"
+msgstr "_Wandula Ekitereka Data Ekigyikamu"
 
 #: ../src/gtk/fm-places-view.c:116
-#, fuzzy
 msgid "_Rename Bookmark Item"
-msgstr "Kyusa erinnya ly'akakwatakifo"
+msgstr "_Kyusa Erinnya Ly'akakwatakifo"
 
 #: ../src/gtk/fm-places-view.c:117
-#, fuzzy
 msgid "Re_move from Bookmark"
-msgstr "Gyawo akakwatakifo"
+msgstr "_Gyawo akakwatakifo"
 
 #: ../src/gtk/fm-places-view.c:129
-#, fuzzy
 msgid "_Empty Trash Can"
-msgstr "Kunkumula ebisuulidwa"
+msgstr "Kunkumu_la Ebisuulidwa"
 
 #. FIXME: we need to set a proper parent window for the dialog
 #: ../src/gtk/fm-places-view.c:868
@@ -685,22 +655,19 @@ msgstr "Wandika erinnya ppya:"
 
 #: ../src/gtk/fm-side-pane.c:61
 msgid "_Off"
-msgstr ""
+msgstr "_Kisa"
 
 #: ../src/gtk/fm-side-pane.c:62
-#, fuzzy
 msgid "_Places"
-msgstr "Ebifo"
+msgstr "_Bifo"
 
 #: ../src/gtk/fm-side-pane.c:63
-#, fuzzy
 msgid "_Directory Tree"
-msgstr "Enkwatagana y'amaterekero"
+msgstr "_Nkwatagana Y'amaterekero"
 
 #: ../src/gtk/fm-side-pane.c:64
-#, fuzzy
 msgid "_Remote"
-msgstr "Ku kompyuta endala"
+msgstr "Ku Kompyuta N_dala"
 
 #: ../src/gtk/fm-side-pane.c:412
 msgid "Places"
@@ -712,43 +679,36 @@ msgstr "Enkwatagana y'amaterekero"
 
 #: ../src/gtk/fm-file-menu.c:156
 msgid "_Open"
-msgstr ""
+msgstr "_Bikkula"
 
 #: ../src/gtk/fm-file-menu.c:157 ../src/gtk/fm-file-menu.c:158
-#, fuzzy
 msgid "Open _With..."
-msgstr "Bikkuza..."
+msgstr "B_ikkuza..."
 
 #: ../src/gtk/fm-file-menu.c:164
-#, fuzzy
 msgid "Create _Symlink"
-msgstr "Kolawo nyunzi"
+msgstr "Kolawo Nyun_zi"
 
 #: ../src/gtk/fm-file-menu.c:165
-#, fuzzy
 msgid "Se_nd To"
-msgstr "Sindikira"
+msgstr "_Sindikira"
 
 #: ../src/gtk/fm-file-menu.c:166
-#, fuzzy
 msgid "Co_mpress..."
-msgstr "Pakira..."
+msgstr "_Pakira..."
 
 #: ../src/gtk/fm-file-menu.c:167
-#, fuzzy
 msgid "Extract _Here"
-msgstr "Pakulira wano"
+msgstr "Pakulira _Wano"
 
 #: ../src/gtk/fm-file-menu.c:168
-#, fuzzy
 msgid "E_xtract To..."
-msgstr "Pakulira..."
+msgstr "P_akulira..."
 
 #: ../src/gtk/fm-file-menu.c:169 ../src/gtk/fm-folder-view.c:186
 #: ../src/gtk/fm-folder-view.c:187
-#, fuzzy
 msgid "Prop_erties"
-msgstr "Ebikwata ku fayiro"
+msgstr "Ebi_kwata ku fayiro"
 
 #: ../src/gtk/fm-file-menu.c:521
 msgid "_Restore"
@@ -803,23 +763,20 @@ msgid "Show _Hidden"
 msgstr "_Laga fayiro enkise"
 
 #: ../src/gtk/fm-folder-view.c:197
-#, fuzzy
 msgid "_Only for this folder"
-msgstr "Tterekero lino lyokka"
+msgstr "Tterekero lino ly_okka"
 
 #: ../src/gtk/fm-folder-view.c:198
 msgid "Check to remember sort as folder setting rather than global one"
 msgstr "Enteekateeka ey'okusengeka ekome ku tterekero lino lyokka"
 
 #: ../src/gtk/fm-folder-view.c:199
-#, fuzzy
 msgid "Mingle _files and folders"
-msgstr "Tabika fayiro ne tterekero"
+msgstr "Tabika _fayiro n'amaterekero"
 
 #: ../src/gtk/fm-folder-view.c:200
-#, fuzzy
 msgid "_Ignore name case"
-msgstr "Tofa ku mpandika y'ennukuta z'omu linnya"
+msgstr "_Tofa ku mpandika y'ennukuta z'omu linnya"
 
 #: ../src/gtk/fm-folder-view.c:211
 msgid "By _Name"
@@ -922,10 +879,9 @@ msgstr "Fayiro '%s' esobola okukola nga puloguramu. Oyagala okugitandika?"
 #. show error if no paths are added
 #: ../src/gtk/fm-gtk-file-launcher.c:566
 msgid "No folders are specified."
-msgstr ""
+msgstr "Tolaze makubo."
 
 #: ../src/gtk/fm-gtk-file-launcher.c:605
-#, fuzzy
 msgid "Select a folder"
 msgstr "Londa tterekero"
 
@@ -951,23 +907,20 @@ msgid "Size"
 msgstr "Bunene"
 
 #: ../src/gtk/fm-folder-model.c:188
-#, fuzzy
 msgid "Permissions"
-msgstr "_Ndukusa"
+msgstr "Ndukusa"
 
 #: ../src/gtk/fm-folder-model.c:189
-#, fuzzy
 msgid "Owner"
-msgstr "Nyini fayiro yekka"
+msgstr "Nnanyini"
 
 #: ../src/gtk/fm-folder-model.c:190
 msgid "Modified"
 msgstr "Amakyusa"
 
 #: ../src/gtk/fm-folder-model.c:191
-#, fuzzy
 msgid "Location"
-msgstr "<b>Obusangiro:</b>"
+msgstr "Obusangiro"
 
 #: ../src/job/fm-dir-list-job.c:201 ../src/job/fm-dir-list-job.c:212
 #: ../src/job/fm-dir-list-job.c:307
@@ -1159,26 +1112,26 @@ msgstr "Disiki eya CD oba DVD"
 #: ../src/vfs/fm-vfs-menu.c:324 ../src/vfs/fm-vfs-menu.c:586
 #: ../src/vfs/fm-vfs-menu.c:618
 msgid "Menu cache error"
-msgstr ""
+msgstr "Eggwanika eriyamba menyu lifunye kiremya"
 
 #. ---- GFile implementation ----
 #: ../src/vfs/fm-vfs-menu.c:381 ../src/vfs/fm-vfs-search.c:896
 msgid "Operation not supported"
-msgstr ""
+msgstr "Omukolo tegusoboka ku sisitemu eno"
 
 #: ../src/vfs/fm-vfs-menu.c:552
 #, c-format
 msgid "Invalid filename %s"
-msgstr ""
+msgstr "%s tekikola nga linnya lya fayiro"
 
 #: ../src/vfs/fm-vfs-menu.c:613
 msgid "Invalid menu directory"
-msgstr ""
+msgstr "Ssi tterekero erya menyu"
 
 #. FIXME: need name to be converted to UTF-8?
 #: ../src/vfs/fm-vfs-search.c:959
 msgid "Search"
-msgstr ""
+msgstr "Noonya"
 
 #~ msgid "<b>_Owner:</b>"
 #~ msgstr "<b>_Nyini yo:</b>"
