--- a/po/uk.po
+++ b/po/uk.po
@@ -7,18 +7,17 @@ msgstr ""
 "Project-Id-Version: libfm\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-10-11 00:21+0200\n"
-"PO-Revision-Date: 2012-10-11 01:47+0300\n"
-"Last-Translator: LStranger <andrej@rep.kiev.ua>\n"
+"PO-Revision-Date: 2013-07-13 07:13+0000\n"
+"Last-Translator: Yarema <yupadmin@gmail.com>\n"
 "Language-Team: Ukrainian <translation@linux.org.ua>\n"
 "Language: uk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n"
-"%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
-"X-Generator: Pootle 2.0.5\n"
-"X-Poedit-Country: Ukraine\n"
-"X-Poedit-Language: Ukrainian\n"
+"Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
+"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: Pootle 2.5.0\n"
+"X-POOTLE-MTIME: 1373699581.0\n"
 
 #: ../data/ui/app-chooser.glade.h:1
 msgid "Choose An Application"
@@ -177,7 +176,7 @@ msgstr "<b>Особливі опції:</b>"
 
 #: ../data/ui/file-prop.glade.h:18
 msgid "Who can read content of the file/directory"
-msgstr "Хто може отримувати вміст файлу чи теки"
+msgstr "Хто може читати вміст файлу чи теки"
 
 #: ../data/ui/file-prop.glade.h:19
 msgid "Who can change content of the file/directory"
@@ -297,7 +296,7 @@ msgid ""
 "mail addresses."
 msgstr ""
 "Улюблений поштовий клієнт, що буде використаний для створення електронного "
-"листа, коли Ви клацаєте на e-mail адресу."
+"листа при клацанні на e-mail адрес."
 
 #: ../data/ui/preferred-apps.glade.h:6
 msgid "<b>Terminal Emulator</b>"
@@ -345,7 +344,7 @@ msgstr "Виберіть дату"
 
 #: ../data/ui/filesearch.glade.h:6
 msgid "Choose a date from the following calendar"
-msgstr "Виберіть дату у календарі далі"
+msgstr "Виберіть дату у наступному календарі"
 
 #: ../data/ui/filesearch.glade.h:7
 msgid "Search Files"
